# tepilora-mcp-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/tepilora_mcp/: __init__.py  __main__.py  config.py  server.py
src/tepilora_mcp/tools/: __init__.py  analytics_store.py  cache.py  credits.py  curated.py  discovery.py  errors.py  full.py  generic.py  prompts.py
tests/: conftest.py  test_analytics_store.py  test_cache.py  test_config.py  test_credits.py  test_curated.py  test_discovery.py  test_errors.py  test_full.py  test_generic.py  test_server.py
